--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:ngrok": "node scripts/ngrok-script.js"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@nextui-org/spinner": "^2.0.30",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -18,14 +19,20 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "ace-builds": "^1.35.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "date-fns": "^3.6.0",
+    "dompurify": "^3.1.5",
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
@@ -33,13 +40,18 @@
     "next-client-cookies": "^1.1.1",
     "ngrok": "^5.0.0-beta.2",
     "react": "^18",
+    "react-ace": "^12.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
