--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.5",
+    "isomorphic-dompurify": "^2.12.0",
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
@@ -48,7 +49,8 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
