--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@nextui-org/spinner": "^2.0.30",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
