--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-client-cookies": "^1.1.1",
     "ngrok": "^5.0.0-beta.2",
