Adding home page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 4000",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,11 +27,13 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "ace-builds": "^1.35.1",
     "axios": "^1.7.2",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.5",
+    "framer-motion": "^11.3.2",
     "isomorphic-dompurify": "^2.12.0",
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
