--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
