--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "ace-builds": "^1.35.1",
     "axios": "^1.7.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.5",
     "framer-motion": "^11.3.2",
+    "geist": "^1.3.1",
     "isomorphic-dompurify": "^2.12.0",
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
@@ -56,6 +58,7 @@
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
