--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "isomorphic-dompurify": "^2.12.0",
     "jotai": "^2.8.3",
     "jwt-decode": "^4.0.0",
+    "libphonenumber-js": "^1.11.5",
     "lucide-react": "^0.395.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
@@ -55,7 +56,8 @@
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.2",
