Adding Sliders , Infos , and Some categories

--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8",
+    "react-use-measure": "^2.1.1",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
