--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@hello-pangea/dnd": "^16.6.0",
     "@icons-pack/react-simple-icons": "^9.6.0",
     "@nextui-org/spinner": "^2.0.30",
