--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@icons-pack/react-simple-icons": "^9.6.0",
     "@nextui-org/spinner": "^2.0.30",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
